--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<h1>ImageVault</h1>",
   "main": "postcss.config.js",
   "scripts": {
+    "build": "tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "pexels": "^1.4.0",
+    "unsplash-js": "^7.0.19"
   }
 }
