--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "pexels": "^1.4.0",
     "unsplash-js": "^7.0.19"
   }
